--- a/recommendation/static/css/skeleton.css
+++ b/recommendation/static/css/skeleton.css
@@ -123,9 +123,9 @@ html {
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
-  font-weight: 400;
+  font-weight: 600;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: rgb(55,55,55); }
 
 
 /* Typography
@@ -171,11 +171,12 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 38px;
+  height: 72px;
+  width:200px;
   padding: 0 30px;
-  color: #555;
+  color: rgb(55,55,55);
   text-align: center;
-  font-size: 11px;
+  font-size: 18px;
   font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
