--- a/recommendation/templates/base.html
+++ b/recommendation/templates/base.html
@@ -16,10 +16,17 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="/static/images/favicon.png" />
 <style>
- body {
+ body {         background-size:cover; 
+                background-attachment:fixed;
+                background-image: url("/static/images/background.jpeg");
                 margin:100px;
                 padding: 50px; /* 60px to make the container go all the way to the bottom of the topbar */
             }
+footer {
+    color:grey;
+    font-size: 10px
+}
+
 </style>
 </head>
     </head>
@@ -27,4 +34,5 @@
   {% block bodyblock %}   
   {% endblock %}
   <script src="/static/jquery.js"></script>
+  <br>
 </body>
