--- a/recommendation/templates/post.html
+++ b/recommendation/templates/post.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% block titleblock %}
 <title>Post</title>
+<style> .button-primary{margin:20px;}
+     </style>
 {% endblock %}
 
 {% block bodyblock %}
 <div class="eight columns">
 <div class="docs-section" id="forms">
-      <h1 class="docs-header">New Recommendation</h6>
+      <h1 class="docs-header">New Recommendation</h1>
       <div class="docs-example docs-example-forms">
         <form method="post" action"/">
         	    {% csrf_token %}
@@ -26,10 +28,12 @@
           </div>
           <label for="exampleMessage">Comment</label>
           <textarea class="u-full-width" id="exampleMessage" name="comment"></textarea>
+          <div class="row">
           <div class="ten columns">
-              <label for="imgF">Image Link</label>
-              <input class="u-full-width" type="url" name="img" id="imgF" style="height:20px">
+              <label for="imgF" id="imgFF">Image Link</label>
+              <input class="u-full-width" type="url" name="img" id="imgF">
             </div>
+          </div>
           <input class="button-primary" type="submit" value="Submit">
         </form>
       </div>
