--- a/recommendation/static/css/skeleton.css
+++ b/recommendation/static/css/skeleton.css
@@ -207,8 +207,8 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; }
+  background-color: rgba(255,255,255,0.25);
+  border-color: grey; }
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
