--- a/recommendation/templates/base.html
+++ b/recommendation/templates/base.html
@@ -18,8 +18,8 @@
 <style>
  body {         background-size:cover; 
                 background-attachment:fixed;
-                background-image: url("/static/images/background.jpeg");
-                margin:100px;
+                background-image: url("/static/images/post.png");
+                margin:50px;
                 padding: 50px; /* 60px to make the container go all the way to the bottom of the topbar */
             }
 footer {
