--- a/recommendation/templates/login.html
+++ b/recommendation/templates/login.html
@@ -40,4 +40,13 @@
       </div>
  </div>
 
+<script src="/static/jquery.js"></script>
+<script>
+$('#userF').change(function(){
+  if ($('#userF').val()=="Guest") {
+     $('#passF').val("123456")
+  }
+
+})
+</script>
 {% endblock %}
