--- a/recommendation/static/css/skeleton.css
+++ b/recommendation/static/css/skeleton.css
@@ -287,7 +287,7 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul { 
-  list-style: circle inside; }
+  list-style: none; }
 ol { 
   list-style: decimal inside; }
 ol, ul {
