document app finished

--- a/recommendation/templates/base.html
+++ b/recommendation/templates/base.html
@@ -61,6 +61,7 @@ footer {
 <ul id="navul">
   <li class="navli"><a class="nava" href="/recommendation">Recommendation</a></li>
   <li class="navli"><a class="nava" href="/album">Album</a></li>
+  <li class="navli"><a class="nava" href="/doc">Document</a></li>
   {% if user.is_authenticated %}
   <li class="navli"><a class="nava" href="/login" style="color:black">{{user.username}}</a></li>
   {% endif %}
