--- a/recommendation/templates/index.html
+++ b/recommendation/templates/index.html
@@ -4,6 +4,12 @@
 <title>recommendations</title>
 <style>
 .item {background-image: url("/static/images/post.png");margin:20px; padding-left: 20px;background-color: rgba(255,255,255,.5);border: 1px solid rgb(200,200,200)}
+.item:hover{
+	  position: relative;
+  left:-0.5em;
+  top:-0.5em;
+  box-shadow: 10px 10px 5px rgba(0,0,0,.3);
+}
 .time, .author{font-size: small;color: grey}
 .category, .cat{text-decoration: underline;font-size: large; color: blue }
 .title{font-size: 25px}
