--- a/doc/templates/display.html
+++ b/doc/templates/display.html
@@ -10,7 +10,12 @@
 	background-image: url("/static/images/paper.jpg");
 	width:50%;
 	padding:2em;
-	box-shadow: 10px 10px 5px rgba(0,0,0,.3);
+}
+.item:hover{
+  position: relative;
+  left:-0.5em;
+  top:-0.5em;
+  box-shadow: 10px 10px 5px rgba(0,0,0,.3);
 }
 .content{
     height: 300px;
