create the portal and message system

--- a/recommendation/static/css/skeleton.css
+++ b/recommendation/static/css/skeleton.css
@@ -208,9 +208,9 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-  color: #FFF;
+  color: #00ffff;
   background-color: rgba(255,255,255,0.25);
-  border-color: grey; }
+  border-color: #00ffff; }
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -222,8 +222,8 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB; }
+  background-color: #daa520;
+  border-color: #daa520; }
 
 
 /* Forms
