--- a/recommendation/templates/index.html
+++ b/recommendation/templates/index.html
@@ -3,7 +3,7 @@
 {% block titleblock %}
 <title>recommendations</title>
 <style>
-.item {background-image: url("/static/images/post.png");margin:20px; padding-left: 20px;background-color: rgba(255,255,255,.5);border: 1px solid rgb(200,200,200)}
+.item {margin:20px; padding-left: 20px;background-color: rgba(255,255,255,.7);border: 1px solid rgb(200,200,200)}
 .item:hover{
 	  position: relative;
   left:-0.5em;
