--- a/doc/templates/display.html
+++ b/doc/templates/display.html
@@ -7,7 +7,7 @@
 }
 .item {
 	margin-top: 1em;
-	background-image: url("/static/images/paper.jpg");
+	background-color:rgba(255,255,255,0.5);
 	width:50%;
 	padding:2em;
 }
@@ -22,7 +22,7 @@
     width: 60%;
     border:solid 2px grey;
     overflow: scroll;}
-.button-primary {width:40%;margin-left:20%;margin-bottom: 50px}
+.button-primary {width:40%;margin-left:20%;margin-bottom: 50px;}
 </style>
 {% endblock %}
 
