Day Counter App finished

--- a/portal/templates/gate.html
+++ b/portal/templates/gate.html
@@ -16,8 +16,9 @@
 .component {float: left}
 .board {margin:2em;
         font-family: monospace;
-        font-size: 1.5em;}
-.msg {color:rgba(0,0,0,.7);}
+        font-size: 1.5em;
+       }
+.msg {color:rgba(255,255,255,.7);}
 </style>
 <link rel="stylesheet" type="text/css" href="/static/slick/slick.css"/>
 {% endblock %}
