--- a/recommendation/templates/base.html
+++ b/recommendation/templates/base.html
@@ -63,6 +63,7 @@ footer {
 <div id="nav">
 <ul id="navul">
   <li class="navli"><a class="nava" href="/">Home</a></li>
+  <li class="navli"><a class="nava" href="/count">Day Counter</a></li>
   <li class="navli"><a class="nava" href="/recommendation">Recommendation</a></li>
   <li class="navli"><a class="nava" href="/album">Album</a></li>
   <li class="navli"><a class="nava" href="/doc">Document</a></li>
