--- a/recommendation/static/css/skeleton.css
+++ b/recommendation/static/css/skeleton.css
@@ -231,6 +231,7 @@ input[type="button"].button-primary:focus {
 input[type="email"],
 input[type="search"],
 input[type="text"],
+input[type="date"],
 input[type="tel"],
 input[type="url"],
 input[type="password"],
