--- a/album/templates/main.html
+++ b/album/templates/main.html
@@ -10,10 +10,10 @@ img.small {width: 200px;height: 120px;border-left;float:left;cursor:pointer;}
 
 {% block bodyblock %}
 
+{% if user.is_superuser %}
 <form method="post" action="/album/upload/" enctype="multipart/form-data">
 	{% csrf_token %}
 <input type="file" id="file" multiple="true" name="photo" style="display:none;">
-
 <div class="row">
 
 	<input class="button" value="Select" id="select">
@@ -21,6 +21,8 @@ img.small {width: 200px;height: 120px;border-left;float:left;cursor:pointer;}
 	<span id="info"></span>
 </div>
 </form>
+{% endif %}
+
 <div class="ten columns">
 <ul>
 {% for picture in pictures %}
